--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cheerio": "^1.0.0-rc.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -41,4 +42,3 @@
     "vitest": "^0.32.1"
   }
 }
-
