--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
