--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^6.25.1",
     "web-vitals": "^2.1.4"
   },
